# vanna-aug

./: .augment-guidelines  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  =1.0.0  Dockerfile  Estrutura de Diretórios.md  GUIA_PRE_COMMIT.md  PR.md  README.md  README_ADAPT_SQL.md  README_READONLY_USER.md  README_VANNA_FLOW.md  check_and_fix_code.sh  check_tests.py  codecov.yml  create_readonly_user.sql  docker-compose.refactored.yml  docker-compose.yml  exemplo_pre_commit.py  fix_training.sh  fix_vanna_base.py  format_code.sh  migrate_to_poetry.sh  move_check_files.sh  move_tests.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_ci_tests.py  run_tests.sh  run_tests_with_options.sh  run_train.sh  setup_pre_commit.sh  setup_readonly_user.sh  test_adapt_sql.py  test_vanna.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
app/: app.py  app_refactored2.py  check_embedding_model.py  check_persistence.py  debug_chromadb.py  fix_chromadb.py  manage_training.py  odoo_documentation.py  odoo_sql_examples.py  reset_and_train.py  reset_collection.py  retrain.py  run_tests.sh  test_chromadb.py  test_example_pairs.py  test_query.py  train_all.py  train_and_verify.py  train_documentation.py  train_examples.py  train_sql_examples.py  train_vanna.py  train_vanna_new.py  vanna_odoo_http.py
docs/: Estrutura de Diretórios.md  PR.md  README.md  README_READONLY_USER.md  anomaly_detection.md  anomaly_detection_algorithms.md  anomaly_detection_examples.md  fix_persistence.md
script/: README_VANNA_FLOW.md  fix_readonly_permissions.sh  (+10 more)
(+77 files in other folders)
